--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
     "dashboard": "Dashboard",
     "branches": "Branches",
     "menu": "Menu",
+    "orders": "Orders",
     "inventory": "Inventory",
     "staff": "Staff Members",
     "user_mgmt": "User Management",
