--- a/locales/ko.json
+++ b/locales/ko.json
@@ -3,6 +3,7 @@
     "dashboard": "대시보드",
     "branches": "지점",
     "menu": "메뉴",
+    "orders": "주문",
     "inventory": "재고",
     "staff": "직원",
     "user_mgmt": "사용자 관리",
