--- a/locales/en.json
+++ b/locales/en.json
@@ -33,6 +33,11 @@
     "chain_wide_insights": "Chain-wide enterprise insights.",
     "ai_intelligence": "AI Intelligence",
     "total_revenue": "Total Revenue",
+    "total_sales": "Total Sales",
+    "refund": "Refund",
+    "discount": "Discount",
+    "net_sales": "Net Sales",
+    "gross_profit": "Gross Profit",
     "net_profit": "Net Profit",
     "inv_alerts": "Inv. Alerts",
     "avg_rating": "Avg. Rating",
@@ -44,6 +49,8 @@
     "all_branches": "All Branches",
     "expenses": "Expenses",
     "top_performing": "Top Performing",
+    "top_5_products": "Top 5 Products",
+    "sales_graph_by_product": "Sales graph by product",
     "view_all_rank": "View All Rank",
     "inventory_health": "Inventory Health",
     "items": "Items",
