--- a/locales/ko.json
+++ b/locales/ko.json
@@ -33,6 +33,11 @@
     "chain_wide_insights": "전사적인 비즈니스 통찰력.",
     "ai_intelligence": "AI 인텔리전스",
     "total_revenue": "총 매출",
+    "total_sales": "총 매출액",
+    "refund": "환불",
+    "discount": "할인",
+    "net_sales": "순 매출",
+    "gross_profit": "매출총이익",
     "net_profit": "순이익",
     "inv_alerts": "재고 알림",
     "avg_rating": "평균 평점",
@@ -44,6 +49,8 @@
     "all_branches": "전체 지점",
     "expenses": "비용",
     "top_performing": "우수 지점",
+    "top_5_products": "상위 5개 상품",
+    "sales_graph_by_product": "상품별 매출 그래프",
     "view_all_rank": "전체 순위 보기",
     "inventory_health": "재고 현황",
     "items": "품목",
