--- a/locales/en.json
+++ b/locales/en.json
@@ -223,6 +223,40 @@
     "delete_confirm_title": "Are you sure?",
     "delete_confirm_remove_text": "Are you sure you want to remove {{name}}? This action cannot be undone.",
     "yes_delete": "Yes, Delete!",
-    "ok": "OK"
+    "ok": "OK",
+    "account_settings": "Account Settings",
+    "configure_preferences": "Configure your personal and business preferences.",
+    "discard": "Discard",
+    "save_changes": "Save Changes",
+    "general": "General",
+    "business_profile": "Business Profile",
+    "notifications": "Notifications",
+    "security": "Security",
+    "billing_plans": "Billing & Plans",
+    "profile_information": "Profile Information",
+    "first_name": "First Name",
+    "last_name": "Last Name",
+    "email_address": "Email Address",
+    "regional_settings": "Regional Settings",
+    "language": "Language",
+    "timezone": "Timezone",
+    "english_us": "English (United States)",
+    "filipino_ph": "Filipino (Philippines)",
+    "timezone_manila": "(GMT+08:00) Manila",
+    "timezone_pacific": "(GMT-08:00) Pacific Time",
+    "notification_preferences": "Notification Preferences",
+    "daily_revenue_reports": "Daily Revenue Reports",
+    "daily_revenue_desc": "Get a summary of earnings at the end of each day.",
+    "low_inventory_alerts": "Low Inventory Alerts",
+    "low_inventory_desc": "Real-time warnings when items are running out.",
+    "staff_schedule_changes": "Staff Schedule Changes",
+    "staff_schedule_desc": "Notify when employees update their work hours.",
+    "marketing_updates": "Marketing Updates",
+    "marketing_updates_desc": "Receive tips and AI-powered marketing trends.",
+    "security_settings": "Security Settings",
+    "two_factor_auth": "Two-Factor Authentication",
+    "two_factor_desc": "Secure your account with 2FA",
+    "change_password": "Change Password",
+    "change_password_desc": "Update your account credentials"
   }
 }
