--- a/locales/ko.json
+++ b/locales/ko.json
@@ -223,6 +223,40 @@
     "delete_confirm_title": "정말 삭제하시겠습니까?",
     "delete_confirm_remove_text": "{{name}}(을)를 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
     "yes_delete": "삭제",
-    "ok": "확인"
+    "ok": "확인",
+    "account_settings": "계정 설정",
+    "configure_preferences": "개인 및 비즈니스 환경설정을 구성합니다.",
+    "discard": "취소",
+    "save_changes": "변경 사항 저장",
+    "general": "일반",
+    "business_profile": "비즈니스 프로필",
+    "notifications": "알림",
+    "security": "보안",
+    "billing_plans": "결제 및 플랜",
+    "profile_information": "프로필 정보",
+    "first_name": "이름",
+    "last_name": "성",
+    "email_address": "이메일 주소",
+    "regional_settings": "지역 설정",
+    "language": "언어",
+    "timezone": "시간대",
+    "english_us": "English (United States)",
+    "filipino_ph": "Filipino (Philippines)",
+    "timezone_manila": "(GMT+08:00) 마닐라",
+    "timezone_pacific": "(GMT-08:00) 태평양 표준시",
+    "notification_preferences": "알림 환경설정",
+    "daily_revenue_reports": "일일 매출 리포트",
+    "daily_revenue_desc": "매일 종료 시 수익 요약을 받습니다.",
+    "low_inventory_alerts": "재고 부족 알림",
+    "low_inventory_desc": "품목이 부족할 때 실시간 경고를 받습니다.",
+    "staff_schedule_changes": "직원 일정 변경",
+    "staff_schedule_desc": "직원이 근무 시간을 업데이트할 때 알림을 받습니다.",
+    "marketing_updates": "마케팅 업데이트",
+    "marketing_updates_desc": "팁과 AI 기반 마케팅 트렌드를 받습니다.",
+    "security_settings": "보안 설정",
+    "two_factor_auth": "2단계 인증",
+    "two_factor_desc": "2FA로 계정을 보호하세요",
+    "change_password": "비밀번호 변경",
+    "change_password_desc": "계정 자격증명 업데이트"
   }
 }
