--- a/locales/en.json
+++ b/locales/en.json
@@ -102,6 +102,80 @@
     "no_description": "No description provided",
     "translate_table": "Translate table",
     "translate_to": "Translate to {{lang}}",
+    "edit_menu_item": "Edit Menu Item",
+    "add_new_menu": "Add New Menu",
+    "update_menu_details": "Update menu details",
+    "menu_name": "Menu Name",
+    "menu_name_placeholder": "e.g. Beef Kare-Kare",
+    "description": "Description",
+    "description_placeholder": "Short description",
+    "uncategorized": "Uncategorized",
+    "price_label": "Price (₱)",
+    "price_placeholder": "0.00",
+    "target_branch": "Target Branch",
+    "select_branch": "Select branch",
+    "image": "Image",
+    "current_image_kept": "Current image kept. Choose a new file to replace.",
+    "saving": "Saving...",
+    "update_menu": "Update Menu",
+    "save_menu": "Save Menu",
+    "edit_menu": "Edit Menu",
+    "delete_menu": "Delete Menu",
+    "no_menu_items_found": "No menu items found",
+    "try_adjusting_filters": "Try adjusting your filters or check the backend connection.",
+    "showing": "Showing",
+    "of": "of",
+    "menu_items_label": "menu items",
+    "delete_menu_item": "Delete Menu Item?",
+    "delete_menu_confirm": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
+    "menu_deleted": "Menu item \"{{name}}\" deleted successfully!",
+    "create_menu_item": "Create Menu Item?",
+    "update_menu_item": "Update Menu Item?",
+    "create_menu_confirm": "Are you sure you want to add \"{{name}}\"?",
+    "update_menu_confirm": "Are you sure you want to update \"{{name}}\"?",
+    "menu_created": "Menu item \"{{name}}\" created successfully!",
+    "menu_updated": "Menu item \"{{name}}\" updated successfully!",
+    "please_select_branch": "Please select a branch.",
+    "untitled": "Untitled",
+    "orders": "Orders",
+    "orders_for": "Orders for",
+    "search_order_placeholder": "Search order no, table...",
+    "all_statuses": "All statuses",
+    "pending": "Pending",
+    "confirmed": "Confirmed",
+    "settled": "Settled",
+    "cancelled": "Cancelled",
+    "order_no": "Order No",
+    "table": "Table",
+    "type": "Type",
+    "total": "Total",
+    "date": "Date",
+    "unable_to_load_orders": "Unable to load orders",
+    "loading_orders": "Loading orders...",
+    "no_orders_found": "No orders found",
+    "try_changing_filters": "Try changing filters or branch.",
+    "dine_in": "Dine-in",
+    "take_out": "Take out",
+    "delivery": "Delivery",
+    "pickup": "Pickup",
+    "view_details": "View details",
+    "mark_as_settled": "Mark as Settled",
+    "cancel_order": "Cancel Order",
+    "orders_label": "orders",
+    "order": "Order",
+    "grand_total": "Grand Total",
+    "subtotal": "Subtotal",
+    "items": "Items",
+    "no_items": "No items.",
+    "item": "Item",
+    "qty": "Qty",
+    "unit": "Unit",
+    "update_order_status": "Update Order Status?",
+    "change_order_status": "Change order {{orderNo}} to \"{{status}}\"?",
+    "yes_update": "Yes, Update",
+    "updated": "Updated!",
+    "order_status_updated": "Order {{orderNo}} is now {{status}}.",
+    "failed_to_update_status": "Failed to update status",
     "inventory_management": "Inventory Management",
     "inventory_subtitle": "Tracking ingredients and menu stock for {{branch}}.",
     "sync_stock": "Sync Stock",
@@ -156,7 +230,6 @@
     "search_roles": "Search roles...",
     "invite_user": "Invite User",
     "create_role": "Create Role",
-    "user": "User",
     "role": "Role",
     "last_activity": "Last Activity",
     "loading_users": "Loading users...",
@@ -169,7 +242,6 @@
     "delete_user_confirm_title": "Delete User?",
     "delete_user_confirm_text": "Are you sure you want to delete \"{{name}}\"? This action cannot be undone.",
     "role_default_description": "Manage permissions and access for this role.",
-    "create_role": "Create Role",
     "create_role_confirm": "Create Role?",
     "update_role_confirm": "Update Role?",
     "create_role_confirm_text": "Are you sure you want to create role \"{{name}}\"?",
@@ -222,7 +294,6 @@
     "short_description": "Short description",
     "delete_confirm_title": "Are you sure?",
     "delete_confirm_remove_text": "Are you sure you want to remove {{name}}? This action cannot be undone.",
-    "yes_delete": "Yes, Delete!",
     "ok": "OK",
     "account_settings": "Account Settings",
     "configure_preferences": "Configure your personal and business preferences.",
@@ -234,8 +305,6 @@
     "security": "Security",
     "billing_plans": "Billing & Plans",
     "profile_information": "Profile Information",
-    "first_name": "First Name",
-    "last_name": "Last Name",
     "email_address": "Email Address",
     "regional_settings": "Regional Settings",
     "language": "Language",
