--- a/locales/ko.json
+++ b/locales/ko.json
@@ -102,6 +102,80 @@
     "no_description": "설명 없음",
     "translate_table": "표 번역",
     "translate_to": "{{lang}}(으)로 번역",
+    "edit_menu_item": "메뉴 편집",
+    "add_new_menu": "새 메뉴 추가",
+    "update_menu_details": "메뉴 정보 수정",
+    "menu_name": "메뉴 이름",
+    "menu_name_placeholder": "예: 비프 카레카레",
+    "description": "설명",
+    "description_placeholder": "간단한 설명",
+    "uncategorized": "미분류",
+    "price_label": "가격 (₱)",
+    "price_placeholder": "0.00",
+    "target_branch": "대상 지점",
+    "select_branch": "지점 선택",
+    "image": "이미지",
+    "current_image_kept": "현재 이미지 유지됨. 교체하려면 새 파일을 선택하세요.",
+    "saving": "저장 중...",
+    "update_menu": "메뉴 업데이트",
+    "save_menu": "메뉴 저장",
+    "edit_menu": "메뉴 편집",
+    "delete_menu": "메뉴 삭제",
+    "no_menu_items_found": "메뉴를 찾을 수 없습니다",
+    "try_adjusting_filters": "필터를 조정하거나 백엔드 연결을 확인하세요.",
+    "showing": "표시 중",
+    "of": "/",
+    "menu_items_label": "개 메뉴",
+    "delete_menu_item": "메뉴를 삭제하시겠습니까?",
+    "delete_menu_confirm": "\"{{name}}\"을(를) 삭제하시겠습니까? 이 작업은 취소할 수 없습니다.",
+    "menu_deleted": "메뉴 \"{{name}}\"이(가) 삭제되었습니다!",
+    "create_menu_item": "메뉴를 추가하시겠습니까?",
+    "update_menu_item": "메뉴를 수정하시겠습니까?",
+    "create_menu_confirm": "\"{{name}}\"을(를) 추가하시겠습니까?",
+    "update_menu_confirm": "\"{{name}}\"을(를) 수정하시겠습니까?",
+    "menu_created": "메뉴 \"{{name}}\"이(가) 생성되었습니다!",
+    "menu_updated": "메뉴 \"{{name}}\"이(가) 수정되었습니다!",
+    "please_select_branch": "지점을 선택하세요.",
+    "untitled": "제목 없음",
+    "orders": "주문",
+    "orders_for": "주문 목록:",
+    "search_order_placeholder": "주문번호, 테이블 검색...",
+    "all_statuses": "전체 상태",
+    "pending": "대기 중",
+    "confirmed": "확인됨",
+    "settled": "결제 완료",
+    "cancelled": "취소됨",
+    "order_no": "주문 번호",
+    "table": "테이블",
+    "type": "유형",
+    "total": "총액",
+    "date": "날짜",
+    "unable_to_load_orders": "주문을 불러올 수 없습니다",
+    "loading_orders": "주문 로딩 중...",
+    "no_orders_found": "주문을 찾을 수 없습니다",
+    "try_changing_filters": "필터나 지점을 변경해 보세요.",
+    "dine_in": "매장 식사",
+    "take_out": "포장",
+    "delivery": "배달",
+    "pickup": "픽업",
+    "view_details": "상세 보기",
+    "mark_as_settled": "결제 완료 처리",
+    "cancel_order": "주문 취소",
+    "orders_label": "개 주문",
+    "order": "주문",
+    "grand_total": "최종 금액",
+    "subtotal": "소계",
+    "items": "항목",
+    "no_items": "항목 없음",
+    "item": "항목",
+    "qty": "수량",
+    "unit": "단가",
+    "update_order_status": "주문 상태를 변경하시겠습니까?",
+    "change_order_status": "주문 {{orderNo}}을(를) \"{{status}}\"(으)로 변경하시겠습니까?",
+    "yes_update": "예, 변경",
+    "updated": "변경됨!",
+    "order_status_updated": "주문 {{orderNo}}이(가) 이제 {{status}}입니다.",
+    "failed_to_update_status": "상태 변경에 실패했습니다",
     "inventory_management": "재고 관리",
     "inventory_subtitle": "{{branch}}의 재료 및 메뉴 재고 추적.",
     "sync_stock": "재고 동기화",
@@ -156,7 +230,6 @@
     "search_roles": "역할 검색...",
     "invite_user": "사용자 초대",
     "create_role": "역할 만들기",
-    "user": "사용자",
     "role": "역할",
     "last_activity": "최근 활동",
     "loading_users": "사용자 로딩 중...",
@@ -169,7 +242,6 @@
     "delete_user_confirm_title": "사용자를 삭제하시겠습니까?",
     "delete_user_confirm_text": "\"{{name}}\"을(를) 삭제하시겠습니까? 이 작업은 취소할 수 없습니다.",
     "role_default_description": "이 역할의 권한 및 액세스를 관리합니다.",
-    "create_role": "역할 만들기",
     "create_role_confirm": "역할을 만들겠습니까?",
     "update_role_confirm": "역할을 수정하겠습니까?",
     "create_role_confirm_text": "역할 \"{{name}}\"을(를) 만들겠습니까?",
@@ -222,7 +294,6 @@
     "short_description": "간단한 설명",
     "delete_confirm_title": "정말 삭제하시겠습니까?",
     "delete_confirm_remove_text": "{{name}}(을)를 삭제하시겠습니까? 이 작업은 되돌릴 수 없습니다.",
-    "yes_delete": "삭제",
     "ok": "확인",
     "account_settings": "계정 설정",
     "configure_preferences": "개인 및 비즈니스 환경설정을 구성합니다.",
@@ -234,8 +305,6 @@
     "security": "보안",
     "billing_plans": "결제 및 플랜",
     "profile_information": "프로필 정보",
-    "first_name": "이름",
-    "last_name": "성",
     "email_address": "이메일 주소",
     "regional_settings": "지역 설정",
     "language": "언어",
