--- a/locales/en.json
+++ b/locales/en.json
@@ -4,6 +4,26 @@
     "branches": "Branches",
     "menu": "Menu",
     "orders": "Orders",
+    "billing": "Billing",
+    "billing_subtitle": "View and record payments.",
+    "no_billing_found": "No billing records found.",
+    "order_no": "Order No",
+    "amount_due": "Amount Due",
+    "amount_paid": "Amount Paid",
+    "view_payment_details": "View and record payments",
+    "enter_payment_details": "Enter payment details",
+    "payment_history": "Payment History",
+    "record_payment": "Record Payment",
+    "balance": "Balance",
+    "payment_method": "Payment Method",
+    "reference": "Reference",
+    "optional": "Optional",
+    "payment_recorded": "Payment recorded successfully.",
+    "amount": "Amount",
+    "encoded_at": "Encoded At",
+    "encoded_by": "Encoded By",
+    "pay_full_balance": "Pay full balance",
+    "records": "records",
     "inventory": "Inventory",
     "staff": "Staff Members",
     "user_mgmt": "User Management",
