--- a/locales/ko.json
+++ b/locales/ko.json
@@ -4,6 +4,26 @@
     "branches": "지점",
     "menu": "메뉴",
     "orders": "주문",
+    "billing": "결제",
+    "billing_subtitle": "결제 조회 및 기록.",
+    "no_billing_found": "결제 기록이 없습니다.",
+    "order_no": "주문 번호",
+    "amount_due": "청구 금액",
+    "amount_paid": "결제 금액",
+    "view_payment_details": "결제 조회 및 기록",
+    "enter_payment_details": "결제 정보 입력",
+    "payment_history": "결제 내역",
+    "record_payment": "결제 기록",
+    "balance": "잔액",
+    "payment_method": "결제 수단",
+    "reference": "참조",
+    "optional": "선택",
+    "payment_recorded": "결제가 기록되었습니다.",
+    "amount": "금액",
+    "encoded_at": "등록 일시",
+    "encoded_by": "등록자",
+    "pay_full_balance": "잔액 전액 결제",
+    "records": "건",
     "inventory": "재고",
     "staff": "직원",
     "user_mgmt": "사용자 관리",
