table management page and notifications

--- a/locales/en.json
+++ b/locales/en.json
@@ -38,6 +38,19 @@
     "context": "Context",
     "global_view": "Global View",
     "branch": "Branch",
+    "tables": "Tables",
+    "tables_subtitle": "Manage restaurant tables by branch.",
+    "add_table": "Add Table",
+    "edit_table": "Edit Table",
+    "update_table_details": "Update table details.",
+    "create_new_table": "Create a new table.",
+    "no_tables_found": "No tables found.",
+    "table_number": "Table No",
+    "capacity": "Capacity",
+    "update": "Update",
+    "saving": "Saving...",
+    "edit": "Edit",
+    "delete": "Delete",
     "loading_branches": "Loading branches...",
     "no_branches": "No branches available",
     "administrator": "Administrator",
@@ -322,6 +335,10 @@
     "general": "General",
     "business_profile": "Business Profile",
     "notifications": "Notifications",
+    "mark_all_read": "Mark all as read",
+    "clear_all": "Clear all",
+    "no_notifications": "No notifications",
+    "unread": "unread",
     "security": "Security",
     "billing_plans": "Billing & Plans",
     "profile_information": "Profile Information",
