--- a/locales/ko.json
+++ b/locales/ko.json
@@ -38,6 +38,19 @@
     "context": "컨텍스트",
     "global_view": "전체 보기",
     "branch": "지점",
+    "tables": "테이블",
+    "tables_subtitle": "지점별 테이블 관리.",
+    "add_table": "테이블 추가",
+    "edit_table": "테이블 수정",
+    "update_table_details": "테이블 정보 수정.",
+    "create_new_table": "새 테이블 만들기.",
+    "no_tables_found": "테이블이 없습니다.",
+    "table_number": "테이블 번호",
+    "capacity": "수용 인원",
+    "update": "수정",
+    "saving": "저장 중...",
+    "edit": "수정",
+    "delete": "삭제",
     "loading_branches": "지점 로딩 중...",
     "no_branches": "사용 가능한 지점이 없습니다",
     "administrator": "관리자",
@@ -322,6 +335,10 @@
     "general": "일반",
     "business_profile": "비즈니스 프로필",
     "notifications": "알림",
+    "mark_all_read": "모두 읽음으로 표시",
+    "clear_all": "모두 지우기",
+    "no_notifications": "알림 없음",
+    "unread": "읽지 않음",
     "security": "보안",
     "billing_plans": "결제 및 플랜",
     "profile_information": "프로필 정보",
