update dashboard language

--- a/locales/en.json
+++ b/locales/en.json
@@ -363,6 +363,33 @@
     "two_factor_auth": "Two-Factor Authentication",
     "two_factor_desc": "Secure your account with 2FA",
     "change_password": "Change Password",
-    "change_password_desc": "Update your account credentials"
+    "change_password_desc": "Update your account credentials",
+    "todays_revenue": "Today's Revenue",
+    "total_orders": "Total Orders",
+    "active_tables": "Active Tables",
+    "pending_orders": "Pending Orders",
+    "advanced_analytics_not_available": "Advanced Analytics Not Available",
+    "advanced_analytics_not_available_desc": "Advanced analytics, charts, and detailed reports are currently only available for Kim's Brothers branch. This branch does not have advanced analytics data at this time.",
+    "best_seller": "Best Seller",
+    "strengths": "Strengths",
+    "attention_needed": "Attention Needed",
+    "recommendations": "Recommendations",
+    "executive_summary": "Executive Summary",
+    "gemini_business_consultant": "Gemini Business Consultant",
+    "ai_powered_strategic_insights": "AI-Powered Strategic Insights",
+    "export": "EXPORT",
+    "payment_methods_summary": "Payment Methods Summary",
+    "top_performing_branches": "Top Performing Branches",
+    "payment_method": "Payment Method",
+    "payment_transaction": "Payment Transaction",
+    "payment_amount": "Payment Amount",
+    "refund_transaction": "Refund Transaction",
+    "refund_amount": "Refund Amount",
+    "net_amount": "Net Amount",
+    "total_sold": "Total Sold",
+    "revenue_comparison": "Revenue Comparison",
+    "monthly_revenue_trends": "Monthly Revenue Trends",
+    "branch_rankings": "Branch Rankings",
+    "by_revenue": "By Revenue"
   }
 }
