--- a/locales/ko.json
+++ b/locales/ko.json
@@ -363,6 +363,33 @@
     "two_factor_auth": "2단계 인증",
     "two_factor_desc": "2FA로 계정을 보호하세요",
     "change_password": "비밀번호 변경",
-    "change_password_desc": "계정 자격증명 업데이트"
+    "change_password_desc": "계정 자격증명 업데이트",
+    "todays_revenue": "오늘의 매출",
+    "total_orders": "전체 주문",
+    "active_tables": "사용 중 테이블",
+    "pending_orders": "대기 중 주문",
+    "advanced_analytics_not_available": "고급 분석 사용 불가",
+    "advanced_analytics_not_available_desc": "고급 분석, 차트 및 상세 리포트는 현재 Kim's Brothers 지점에서만 사용할 수 있습니다. 이 지점은 현재 고급 분석 데이터가 없습니다.",
+    "best_seller": "베스트셀러",
+    "strengths": "강점",
+    "attention_needed": "주의 필요",
+    "recommendations": "권장 사항",
+    "executive_summary": "경영 요약",
+    "gemini_business_consultant": "Gemini 비즈니스 컨설턴트",
+    "ai_powered_strategic_insights": "AI 기반 전략적 인사이트",
+    "export": "내보내기",
+    "payment_methods_summary": "결제 방법 요약",
+    "top_performing_branches": "최고 실적 지점",
+    "payment_method": "결제 방법",
+    "payment_transaction": "결제 거래",
+    "payment_amount": "결제 금액",
+    "refund_transaction": "환불 거래",
+    "refund_amount": "환불 금액",
+    "net_amount": "순 금액",
+    "total_sold": "총 판매량",
+    "revenue_comparison": "매출 비교",
+    "monthly_revenue_trends": "월별 매출 추세",
+    "branch_rankings": "지점 순위",
+    "by_revenue": "매출별"
   }
 }
